create workers-table and methods for updating, adding and deleting worker

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,13 +1,14 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.app {
+  position: relative;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.auth_popup {
+  padding: 1rem;
+  position: absolute;
+  width: 50vw;
+  /*height: 50vh;*/
+  top: 25vh;
+  left: 25vw;
+  /*border: 1px solid black;*/
+  border-radius: 1rem;
 }
