--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,3 +12,29 @@
   /*border: 1px solid black;*/
   border-radius: 1rem;
 }
+
+.form_header {
+  display: flex;
+  justify-content: space-around;
+}
+
+.form_header_name {
+  padding-left: 20%;
+  text-align: center;
+  width: 70%;
+}
+
+.form_header_add {
+  text-align: center;
+  width: 30%;
+}
+
+.container {
+  padding: 1rem,
+}
+
+.wrapper{
+  margin-top: 2rem;
+  display: flex;
+  justify-content: flex-end;
+}
